test/functions/redef_1.c
// RUN: %check -e %s

f(int i)
{
	extern f(void); // CHECK: /error: incompatible redefinition of "f"/
	return 5;
}
